# KirinChat

./: .env.example  .gitignore  DEV_GUIDE.md  DOCS_INDEX.md  LICENSE  QUICKSTART.md  README.md  README_EN.md  agentchat.bat  agentchat.sh  kirinchat.bat  package.json  start-all.bat  start-all.sh  start-dev.bat  start-dev.sh  start-frontend.bat  start-frontend.sh  stop-dev.bat  stop-dev.sh
.claude/: launch.json
.claude/worktrees/architecture-fix/: .env.example  .gitignore  DEV_GUIDE.md  DOCS_INDEX.md  README.md  kirinchat.bat  package-lock.json  package.json
.trae/documents/: unified-layout-system.md  unify-frontend-styles-remaining.md  unify-frontend-styles.md
.trae/specs/identify-dead-code/: checklist.md  spec.md  tasks.md
.trae/specs/rebuild-scrollbar-style/: checklist.md
.trae/specs/rebuild-workspace-mobile/: checklist.md  spec.md  tasks.md
docker/: README.md  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.yml  docker_config.yaml
docs/reference/: core.md  kirinchat.md
scripts/: start.py
scripts/model-server/: start-model-server.bat
src/backend/: README.md  pyproject.toml
src/backend/agentchat/: config-dev.yaml  (+1 more)
src/backend/agentchat/mcp_servers/lark_mcp/: pyproject.toml
src/frontend/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
tests/backend/: conftest.py  test_evaluation_service.py  test_interview_api.py  test_interview_service.py  test_jd_service.py  test_learning_service.py  test_llm_parser.py  test_minio_service.py  test_pdf_service.py  test_prompt_sanitizer.py  test_resume_service.py
(+650 files in other folders)
